--- a/package.json
+++ b/package.json
@@ -9,17 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@jupiterdev/react-calendar": "^3.1.1",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.5.2",
     "axios": "^1.6.0",
     "bcrypt": "^5.1.1",
+    "gsap": "^3.12.2",
     "next": "13.5.6",
     "next-auth": "^4.24.4",
     "next-cloudinary": "^5.3.0",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.7",
     "react": "^18",
+    "react-calendar": "^4.6.1",
+    "react-date-range": "^1.4.0",
     "react-dom": "^18",
+    "react-draggable": "^4.4.6",
     "react-hook-form": "^7.47.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
@@ -28,9 +33,11 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.1",
+    "@types/gsap": "^3.0.0",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
+    "@types/react-date-range": "^1.4.8",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.16",
     "babel-loader": "^9.1.3",
