--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@devexpress/dx-react-core": "^4.0.8",
+    "@devexpress/dx-react-scheduler": "^4.0.8",
     "@jupiterdev/react-calendar": "^3.1.1",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.5.2",
@@ -28,10 +30,12 @@
     "react-hook-form": "^7.47.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
+    "smart-webcomponents-react": "^18.0.11",
     "swr": "^2.2.4",
     "zustand": "^4.4.4"
   },
   "devDependencies": {
+    "@daypilot/daypilot-lite-react": "^3.20.1",
     "@types/bcrypt": "^5.0.1",
     "@types/gsap": "^3.0.0",
     "@types/node": "^20",
